@@ -86,9 +86,12 @@ S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
 S3method(makeRLearner,classif.bst)
 S3method(makeRLearner,classif.cforest)
+S3method(makeRLearner,classif.clusterSVM)
 S3method(makeRLearner,classif.ctree)
+S3method(makeRLearner,classif.dcSVM)
 S3method(makeRLearner,classif.extraTrees)
 S3method(makeRLearner,classif.fnn)
+S3method(makeRLearner,classif.gaterSVM)
 S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
@@ -228,9 +231,12 @@ S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
 S3method(predictLearner,classif.bst)
 S3method(predictLearner,classif.cforest)
+S3method(predictLearner,classif.clusterSVM)
 S3method(predictLearner,classif.ctree)
+S3method(predictLearner,classif.dcSVM)
 S3method(predictLearner,classif.extraTrees)
 S3method(predictLearner,classif.fnn)
+S3method(predictLearner,classif.gaterSVM)
 S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
@@ -418,9 +424,12 @@ S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
 S3method(trainLearner,classif.bst)
 S3method(trainLearner,classif.cforest)
+S3method(trainLearner,classif.clusterSVM)
 S3method(trainLearner,classif.ctree)
+S3method(trainLearner,classif.dcSVM)
 S3method(trainLearner,classif.extraTrees)
 S3method(trainLearner,classif.fnn)
+S3method(trainLearner,classif.gaterSVM)
 S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
